# aurid

.github/workflows/: test.yml
aurid/: .gitignore  .simplecov  Gemfile  README.md  Rakefile  config.ru  docker-compose.yml
aurid/.github/workflows/: test.yml
aurid/apps/admin_console/: Dockerfile  Gemfile  Rakefile  config.ru
aurid/apps/admin_console/app/controllers/: application_controller.rb
aurid/apps/admin_console/app/controllers/api/v1/: auth_controller.rb  base_controller.rb  tenants_controller.rb  (+1 more)
aurid/apps/admin_console/app/models/: application_record.rb  tenant.rb  user.rb
aurid/apps/admin_console/app/services/: base_service.rb  keycloak_service.rb
aurid/apps/admin_console/config/: application.rb  boot.rb  database.yml  routes.rb
aurid/apps/admin_console/config/environments/: development.rb  production.rb
aurid/apps/admin_console/config/initializers/: devise.rb
aurid/apps/admin_console/db/migrate/: 20240621000000_create_tenants.rb  20240621000001_create_users.rb  20240621000002_create_roles_and_user_roles.rb
aurid/apps/admin_console/spec/: rails_helper.rb  spec_helper.rb
aurid/apps/admin_console/spec/factories/: tenants.rb  users.rb
aurid/apps/admin_console/spec/features/: ad_migration_spec.rb  authentication_spec.rb  tenant_management_spec.rb  user_management_spec.rb
aurid/apps/admin_console/spec/models/: role_spec.rb  tenant_spec.rb  user_spec.rb
aurid/apps/admin_console/spec/services/: keycloak_service_spec.rb
aurid/k8s/helm/aurid-admin-console/: Chart.yaml  values.yaml
aurid/rust/migration_tool/: Cargo.toml
aurid/rust/migration_tool/src/: ad.rs  config.rs  freeipa.rs  main.rs  migration.rs  models.rs  reporting.rs
aurid/rust/migration_tool/tests/: ad_connection_test.rs  config_test.rs
(+5 files in other folders)
