[package]
name = "aurid-migrate"
version = "0.1.0"
edition = "2021"
authors = ["Aurid ApS <team@aurid.io>"]
description = "Active Directory to FreeIPA migration tool for Aurid"
license = "Proprietary"
readme = "README.md"
homepage = "https://aurid.io"
repository = "https://github.com/jeesondk/aurid"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# LDAP
ldap3 = "0.11"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
toml = "0.7"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Data processing
csv = { version = "1.3", features = ["serde"] }

# Cryptography
aes = "0.8"
block-modes = "0.9"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"

# HTTP client for FreeIPA API
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Progress bars and spinners
indicatif = "0.17"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.4", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
test-containers = "0.15"
mockito = "1.1"
tempfile = "3.8"

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[[bin]]
name = "aurid-migrate"
path = "src/main.rs"

[features]
default = []
# Enable verbose logging
verbose = []
# Enable dry-run mode (no changes)
dry-run = []
# Enable JSON output
testing = []
